# Python_Web-scrapper-Challenge_Study

./: .breakpoints  .replit  README.md  main.py  pyproject.toml  python.csv
Day10/: main.py
Day10/extractors/: web_scrapper_remoteok.py  web_scrapper_wework.py
Day10/templates/: home.html  search.html
Day3/: tax_calculator.py
Day4/: day4_challenge_calculator.py
Day6/: list_calculator.py
Day8/: web_scrapper01.py  web_scrapper_indeed.py  web_scrapper_naver.py  web_scrapper_study.py
